Bug 403794 - For components no function of the context menu entries Component, Port and Artifact
Summary: For components no function of the context menu entries Component, Port and Ar...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.1 (KDE Applications 18.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-31 07:46 UTC by Ralf Habacker
Modified: 2019-08-08 22:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-01-31 07:46:55 UTC
The menu items mentioned have no function in component and deployment diagrams.

STEPS TO REPRODUCE
1. start umbrello
2. add component diagram
3. add component
4. select component
5. right click on component
6. select Artifact, Component or Port

OBSERVED RESULT
The mentioned functions are not supported

EXPECTED RESULT
The functions should perform the requested action

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 42.3
KDE Frameworks Version: 5.54
Qt Version: 5.11
Comment 1 Ralf Habacker 2019-08-08 22:52:06 UTC
Git commit 69dd8b1ba495cb76fe5e201d0168cb1dc7324103 by Ralf Habacker.
Committed on 08/08/2019 at 22:51.
Pushed by habacker into branch 'master'.

Add support for adding connected "required interfaces"
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +4    -0    umbrello/menus/listpopupmenu.cpp
M  +3    -0    umbrello/menus/listpopupmenu.h
M  +1    -0    umbrello/menus/umlscenepopupmenu.cpp
M  +10   -1    umbrello/menus/widgetbasepopupmenu.cpp
M  +1    -0    umbrello/umlscene.cpp
M  +74   -27   umbrello/umlwidgets/umlwidget.cpp
M  +7    -1    umbrello/umlwidgets/umlwidget.h
M  +1    -1    umbrello/worktoolbar.cpp

https://commits.kde.org/umbrello/69dd8b1ba495cb76fe5e201d0168cb1dc7324103