Enable generating artifacts, interfaces and ports for components by context menu

BUG:403794
FIXED-IN:2.29.80 (KDE Applications 19.11.80)